maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:44: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    if (isDirectionFree && sommeAngle=0) {
                        ^